# 7rikazhexde_repo-dispatch-event-sender

./: .pre-commit-config.yaml  pyproject.toml
.github/workflows/: dependabot_prch.yml  prch_test_matrix_json.yml  receive_payload_to_pytest.yml  send_payload_to_pytest.yml  update-requirements-after-dependabot.yml  update-version-and-release.yml  update_pre-commit_hooks.yml
